apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'application'

// Declares binary plugin and its required JavaFX classpath
// url: http://dl.bintray.com/content/shemnon/javafx-gradle/0.4.0/javafx.plugin
apply from: 'javafx.plugin'

mainClassName = 'net.erickpineda.Main'
sourceCompatibility = 1.7
version = '1.0'

// Configures plugin
javafx {
    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
    //javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.7.0_40.jdk'
    javaRuntime = "${System.properties['java.home']}"
    
    // Application name and ID presented by target OS
    appID 'AstrologiaApp'
    appName 'Astrologia Application'
    
    // Main class of application
    mainClass 'net.erickpineda.Main'
    
    // JVM arguments, system properties, application command line arguments
    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = ['prism.disableRegionCaching':'true']
    arguments = ['-l', '--fast']

    // Keystore credentials for signing JAR
    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
    releaseKey {
        alias = 'release'
        keyPass = getProjectProperty('keyStorePassword')
        keyStore = file("${System.properties['user.home']}/keystore/keystore.jks")
        storePass = getProjectProperty('storePassword')
    }
    
    signingMode 'release'
    
    // ...
}

String getProjectProperty(String propertyName) {
    project.hasProperty(propertyName) ? project.property(propertyName) : null
}

repositories {
    mavenCentral()
}

dependencies {
	//compile files("${System.properties['java.home']}/lib/ext/jfxrt.jar")
	compile 'org.controlsfx:controlsfx:8.20.8'
	compile 'mysql:mysql-connector-java:5.1.35'
	compile 'org.eclipse.persistence:javax.persistence:2.1.0'
	compile 'org.eclipse.persistence:eclipselink:2.6.0'
    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
    testCompile group: 'junit', name: 'junit', version: '4.+'
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName,
        		   'Implementation-Title': 'Gradle Quickstart',
                   'Implementation-Version': version
    }
}

test {
    systemProperties 'property': 'value'
}

sourceSets {
    main {
        java {
            srcDir 'src/java'
        }
        resources {
            srcDir 'src/resources'
        }
        resources {
        	srcDir 'resources/META-INF'
        }
    }
}

uploadArchives {
    repositories {
       flatDir {
           dirs 'repos'
       }
    }
}
